use patched framework

--- a/development_app1_tinyusb/platformio.ini
+++ b/development_app1_tinyusb/platformio.ini
@@ -14,3 +14,5 @@ board = generic
 framework = arduino
 build_flags = 
 	-DUSE_TINYUSB
+platform_packages =
+   framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
