--- a/development_app2/platformio.ini
+++ b/development_app2/platformio.ini
@@ -12,3 +12,5 @@
 platform = raspberrypi
 board = generic
 framework = arduino
+platform_packages =
+   framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
