--- a/development_app1_tinyusb/platformio.ini
+++ b/development_app1_tinyusb/platformio.ini
@@ -13,6 +13,6 @@ platform = raspberrypi
 board = generic
 framework = arduino
 build_flags = 
-	-DUSE_TINYUSB
+	-DUSE_TINYUSB -DCFG_TUD_HID=2
 platform_packages =
    framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
