--- a/development_app1_tinyusb/platformio.ini
+++ b/development_app1_tinyusb/platformio.ini
@@ -12,7 +12,9 @@
 platform = raspberrypi
 board = generic
 framework = arduino
+platform_packages = 
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
+lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 build_flags = 
 	-DUSE_TINYUSB -DCFG_TUD_HID=2
-platform_packages =
-   framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
+board_build.filesystem_size = 64k
