--- a/development_app1_tinyusb/platformio.ini
+++ b/development_app1_tinyusb/platformio.ini
@@ -15,6 +15,16 @@ framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
 lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+
 build_flags = 
-	-DUSE_TINYUSB -DCFG_TUD_HID=2
+	-DUSE_TINYUSB 
+	-DCFG_TUD_HID=2
+	-DKERMITE_TARGET_MCU_RP2040
+	-DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
+	-DKERMITE_KEYBOARD_NAME=\"mykbd\"
+	-DEXTR_KERMITE_PROJECT_RELEASE_BUILD_REVISION=0
+  -DEXTR_KERMITE_IS_RESOURCE_ORIGIN_ONLINE=0
+  -DEXTR_KERMITE_VARIATION_NAME=\"default\"
+
+
 board_build.filesystem_size = 64k
