use xprintf for debugging

--- a/development_app1_tinyusb/platformio.ini
+++ b/development_app1_tinyusb/platformio.ini
@@ -25,6 +25,6 @@ build_flags =
 	-DEXTR_KERMITE_PROJECT_RELEASE_BUILD_REVISION=0
   -DEXTR_KERMITE_IS_RESOURCE_ORIGIN_ONLINE=0
   -DEXTR_KERMITE_VARIATION_NAME=\"default\"
-
+	-DKERMITE_CORE_DEBUG_LOG
 
 board_build.filesystem_size = 64k
