--- a/examples/development_app1_tinyusb/platformio.ini
+++ b/examples/development_app1_tinyusb/platformio.ini
@@ -14,7 +14,7 @@ board = generic
 framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
-; lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
 build_flags = 
 	-DUSE_TINYUSB 
@@ -24,5 +24,3 @@ build_flags =
 	-DKERMITE_CORE_DEBUG_LOG
 
 board_build.filesystem_size = 64k
-
-lib_extra_dirs = ../../
