--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Other
 url=https://kermite.org
 architectures=rp2040
 includes=KermiteCore.h
-depends=Adafruit SPIFlash
+depends=Adafruit SPIFlash (>=4.1.0)
