use symbolic link for library development

--- a/examples/development_app1_tinyusb/platformio.ini
+++ b/examples/development_app1_tinyusb/platformio.ini
@@ -14,7 +14,8 @@ board = generic
 framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
-lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
+lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
 build_flags = 
 	-DUSE_TINYUSB 
