--- a/examples/development_app1_tinyusb/Makefile
+++ b/examples/development_app1_tinyusb/Makefile
@@ -14,3 +14,10 @@ write_uf2:
 	cmd /c copy .pio\build\generic\firmware.uf2 D:\firmware.uf2
 
 debug: flash monitor
+
+# create library symlink for development
+symlink_win_create:
+	cmd /c mklink /D lib\kermite_core_dev\src ..\..\..\..\src
+
+symlink_win_remove:
+	cmd /c rmdir lib\kermite_core_dev\src
