--- a/examples/development_app1_tinyusb/platformio.ini
+++ b/examples/development_app1_tinyusb/platformio.ini
@@ -20,8 +20,8 @@ lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 build_flags = 
 	-DUSE_TINYUSB 
 	-DCFG_TUD_HID=2
-	-DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
-	-DKERMITE_KEYBOARD_NAME=\"mykbd\"
+	; -DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
+	; -DKERMITE_KEYBOARD_NAME=\"mykbd\"
 	-DKERMITE_CORE_DEBUG_LOG
 
 board_build.filesystem_size = 64k
