--- a/examples/development_app1_tinyusb/platformio.ini
+++ b/examples/development_app1_tinyusb/platformio.ini
@@ -22,6 +22,6 @@ build_flags =
 	-DCFG_TUD_HID=2
 	; -DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
 	; -DKERMITE_KEYBOARD_NAME=\"mykbd\"
-	-DKERMITE_CORE_DEBUG_LOG
+	;-DKERMITE_CORE_DEBUG_LOG
 
 board_build.filesystem_size = 64k
