--- a/examples/development_app2_picosdk_tinyusb/Makefile
+++ b/examples/development_app2_picosdk_tinyusb/Makefile
@@ -14,3 +14,11 @@ write_uf2: build
 	cmd /c copy .pio\build\generic\firmware.uf2 D:\firmware.uf2
 
 debug: flash monitor
+
+# create library symlink for development
+symlink_win_create:
+	cmd /c mklink /D lib\kermite_core_dev\src ..\..\..\..\src
+
+symlink_win_remove:
+	cmd /c rmdir lib\kermite_core_dev\src
+
