--- a/examples/development_app2_picosdk_tinyusb/platformio.ini
+++ b/examples/development_app2_picosdk_tinyusb/platformio.ini
@@ -12,5 +12,6 @@
 platform = raspberrypi
 board = generic
 framework = arduino
-
-build_flags = -Isrc
+platform_packages = 
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
+lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
