--- a/examples/development_app1_adafruit_tinyusb/platformio.ini
+++ b/examples/development_app1_adafruit_tinyusb/platformio.ini
@@ -13,7 +13,7 @@ platform = raspberrypi
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico.git
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-8/rp2040-2.6.5-kermite-fork-8.zip
 lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
