--- a/examples/development_app2_picosdk_tinyusb/platformio.ini
+++ b/examples/development_app2_picosdk_tinyusb/platformio.ini
@@ -13,7 +13,9 @@ platform = raspberrypi
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-8/rp2040-2.6.5-kermite-fork-8.zip
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-9/rp2040-2.6.5-kermite-fork-9.zip
+; platform_packages = 
+; 	framework-arduinopico@symlink://../../../arduino-pico
 
 lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
