remove dependency to adafruit spiflash

--- a/examples/development_app2_picosdk_tinyusb/platformio.ini
+++ b/examples/development_app2_picosdk_tinyusb/platformio.ini
@@ -17,5 +17,5 @@ platform_packages =
 ; platform_packages = 
 ; 	framework-arduinopico@symlink://../../../arduino-pico
 
-lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+; lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
