--- a/examples/development_app1_adafruit_tinyusb/platformio.ini
+++ b/examples/development_app1_adafruit_tinyusb/platformio.ini
@@ -14,11 +14,12 @@ board = generic
 framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-9/rp2040-2.6.5-kermite-fork-9.zip
-lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+;lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
 build_flags =
 	-DUSE_TINYUSB
+	; -DUSE_ADAFUIT_SPI_FLASH
 	-DCFG_TUD_HID=2
 	; -DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
 	; -DKERMITE_KEYBOARD_NAME=\"mykbd\"
