cleanup stack selection definitions

--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -18,6 +18,8 @@ platform_packages =
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
 build_flags =
+  -DKERMITECORE_MANUAL_STACK_CONFIG
+	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
 	-DUSE_TINYUSB
 	; -DUSE_ADAFUIT_SPI_FLASH
 	-DCFG_TUD_HID=2
