--- a/development/dev_app3_use_portable_stacks/platformio.ini
+++ b/development/dev_app3_use_portable_stacks/platformio.ini
@@ -15,10 +15,14 @@ framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
 lib_deps = 
-	https://github.com/kermite-org/KermiteCore_Arduino.git
+	;https://github.com/kermite-org/KermiteCore_Arduino.git
 	adafruit/Adafruit SPIFlash@^4.0.0
+
 board_build.filesystem_size = 64k
 build_flags =
+  -DKERMITECORE_MANUAL_STACK_CONFIG
+	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
+	-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_ADAFRUIT_SPIFLASH
 	-DUSE_TINYUSB
 	-DCFG_TUD_HID=2
-	-DUSE_ADAFRUIT_SPIFLASH
+
