--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -19,6 +19,7 @@ platform_packages =
 
 build_flags =
   -DKERMITECORE_MANUAL_STACK_CONFIG
+	-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_DUMMY_IMPL
 	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
 	-DUSE_TINYUSB
 	; -DUSE_ADAFUIT_SPI_FLASH
