--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -18,13 +18,13 @@ platform_packages =
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
 build_flags =
-  -DKERMITECORE_MANUAL_STACK_CONFIG
+  ;-DKERMITECORE_MANUAL_STACK_CONFIG
 	;-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_DUMMY_IMPL
-	-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_RP2040_PICO_SDK
+	;-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_RP2040_PICO_SDK
 	;-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
 	-DUSE_TINYUSB
 	; -DUSE_ADAFUIT_SPI_FLASH
-	-DCFG_TUD_HID=2
+	;-DCFG_TUD_HID=2
 	; -DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
 	; -DKERMITE_KEYBOARD_NAME=\"mykbd\"
 	;-DKERMITE_CORE_DEBUG_LOG
