use shared hid implementation for arduino-pico usb stack

--- a/development/dev_app2_picosdk_tinyusb/platformio.ini
+++ b/development/dev_app2_picosdk_tinyusb/platformio.ini
@@ -12,10 +12,10 @@
 platform = raspberrypi
 board = generic
 framework = arduino
+;platform_packages = 
+;	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
-; platform_packages = 
-; 	framework-arduinopico@symlink://../../../arduino-pico
+ 	framework-arduinopico@symlink://../../../arduino-pico
 
 ; lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
