update build configurations

--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -9,11 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:generic]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-4/rp2040-2.6.5-kermite-fork-4.zip
 ;lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
