--- a/development/dev_app1_adafruit_tinyusb/Makefile
+++ b/development/dev_app1_adafruit_tinyusb/Makefile
@@ -17,7 +17,9 @@ debug: flash monitor
 
 # create library symlink for development
 symlink_win_create:
+	cmd /c mkdir lib\kermite_core_dev
 	cmd /c mklink /D lib\kermite_core_dev\src ..\..\..\..\src
 
 symlink_win_remove:
 	cmd /c rmdir lib\kermite_core_dev\src
+	cmd /c rmdir lib\kermite_core_dev
