--- a/development/dev_app3_use_portable_stacks/platformio.ini
+++ b/development/dev_app3_use_portable_stacks/platformio.ini
@@ -9,13 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:generic]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-4/rp2040-2.6.5-kermite-fork-4.zip
 lib_deps = 
-	;https://github.com/kermite-org/KermiteCore_Arduino.git
+	https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
 	adafruit/Adafruit SPIFlash@^4.0.0
 
 board_build.filesystem_size = 64k
@@ -24,5 +24,4 @@ build_flags =
 	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
 	-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_ADAFRUIT_SPIFLASH
 	-DUSE_TINYUSB
-	-DCFG_TUD_HID=2
 
