--- a/examples_platformio/basic/platformio.ini
+++ b/examples_platformio/basic/platformio.ini
@@ -9,10 +9,11 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:generic]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-2/rp2040-2.6.5-kermite-fork-2.zip
-lib_deps = https://github.com/kermite-org/KermiteCore_Arduino.git
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-4/rp2040-2.6.5-kermite-fork-4.zip
+lib_deps = https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
+
 board_build.filesystem_size = 64k
