update code for debugging

--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -20,6 +20,7 @@ platform_packages =
 build_flags =
   -DKERMITECORE_MANUAL_STACK_CONFIG
 	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
+	-DKERMITECORE_USE_FLASH_PERSIST_SECTOR_DUMMY_IMPL
 	-DUSE_TINYUSB
 	; -DUSE_ADAFUIT_SPI_FLASH
 	-DCFG_TUD_HID=2
