--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -13,7 +13,9 @@ platform = raspberrypi
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-3/rp2040-2.6.5-kermite-fork-3.zip
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+;platform_packages = 
+; 	framework-arduinopico@symlink://../../../arduino-pico
 ;lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
 ;lib_deps = https://github.com/kermite-org/KermiteCore_PlatformIO.git
 
