apply usable code part of single-hid branch

--- a/development/dev_app1_adafruit_tinyusb/Makefile
+++ b/development/dev_app1_adafruit_tinyusb/Makefile
@@ -17,14 +17,17 @@ debug: flash monitor
 
 # create library symlink for development
 symlink_win_create:
+	cmd /c mkdir lib\kermite_core_dev
 	cmd /c mklink /D lib\kermite_core_dev\src ..\..\..\..\src
 
 symlink_win_remove:
 	cmd /c rmdir lib\kermite_core_dev\src
-
+	cmd /c rmdir lib\kermite_core_dev
+	
 symlink_mac_create:
 	mkdir -p lib/kermite_core_dev
 	ln -snF ../../../../src lib/kermite_core_dev/src
 
 symlink_mac_remove:
 	unlink lib/kermite_core_dev/src
+
