--- a/development/dev_app2_picosdk_tinyusb/platformio.ini
+++ b/development/dev_app2_picosdk_tinyusb/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:generic]
-platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
 platform_packages = 
