fix code for separated hid interfaces

--- a/development/dev_app1_adafruit_tinyusb/platformio.ini
+++ b/development/dev_app1_adafruit_tinyusb/platformio.ini
@@ -26,7 +26,7 @@ build_flags =
 	;-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
 	-DUSE_TINYUSB
 	; -DUSE_ADAFUIT_SPI_FLASH
-	;-DCFG_TUD_HID=2
+	-DCFG_TUD_HID=2
 	; -DKERMITE_FIRMWARE_ID=\"Y1NFrC\"
 	; -DKERMITE_KEYBOARD_NAME=\"mykbd\"
 	;-DKERMITE_CORE_DEBUG_LOG
