--- a/development/dev_app2_picosdk_tinyusb/platformio.ini
+++ b/development/dev_app2_picosdk_tinyusb/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs=generic
+;default_envs=portable_stack
+
 [env:generic]
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
@@ -16,6 +20,27 @@ platform_packages =
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 ;platform_packages = 
 ; 	framework-arduinopico@symlink://../../../arduino-pico
-
-; lib_deps = adafruit/Adafruit SPIFlash@^4.0.0
+lib_deps = adafruit/Adafruit NeoPixel@^1.10.7
 board_build.filesystem_size = 64k
+
+
+[env:portable_stack]
+; This configuration uses portable implementation for usb and flash storage. (They are not depend on RP2040.)
+; Adafruit_TinyUSB_Arduino is used instead of the usb stack of arduino-pico.
+; Adafruit_SPIFlash is used instead of pico-sdk's flash writing api.
+; It might be helpful when we utilize KermiteCore with other MCU platforms.
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = generic
+framework = arduino
+platform_packages = 
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.10.7
+	adafruit/Adafruit SPIFlash@^4.0.0
+board_build.filesystem_size = 64k
+build_flags =
+  -DKERMITECORE_MANUAL_STACK_CONFIG
+	-DKEMRITECORE_USE_USBIOCORE_ADAFRUIT_TINYUSB
+	-DKERMITECORE_USE_FLASHSTORAGE_ADAFRUIT_SPIFLASH
+	-DUSE_TINYUSB
+	-DCFG_TUD_HID=2
