--- a/development/testbed/Makefile
+++ b/development/testbed/Makefile
@@ -14,15 +14,12 @@ debug: flash monitor
 
 # create library symlink for development
 symlink_win_create:
-	cmd /c mkdir lib\kermite_core_dev
-	cmd /c mklink /D lib\kermite_core_dev\src ..\..\..\..\src
+	cmd /c mklink /d lib\kermite_core_dev\src ..\..\..\..\src
 
 symlink_win_remove:
 	cmd /c rmdir lib\kermite_core_dev\src
-	cmd /c rmdir lib\kermite_core_dev
 
 symlink_mac_create:
-	mkdir -p lib/kermite_core_dev
 	ln -snF ../../../../src lib/kermite_core_dev/src
 
 symlink_mac_remove:
