--- a/development/testbed/platformio.ini
+++ b/development/testbed/platformio.ini
@@ -20,7 +20,7 @@ platform_packages =
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 ;platform_packages = 
 ; 	framework-arduinopico@symlink://../../../arduino-pico
-lib_deps = adafruit/Adafruit NeoPixel@^1.10.7
+lib_deps = https://github.com/kermite-org/keyboard_peripheral_modules
 board_build.filesystem_size = 64k
 
 
@@ -35,7 +35,7 @@ framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.10.7
+	https://github.com/kermite-org/keyboard_peripheral_modules
 	adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
 build_flags =
