--- a/examples_platformio/basic/platformio.ini
+++ b/examples_platformio/basic/platformio.ini
@@ -13,7 +13,10 @@ platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
 platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-4/rp2040-2.6.5-kermite-fork-4.zip
-lib_deps = https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
+	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+lib_deps = 
+	; https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
+	https://github.com/kermite-org/KermiteCore_Arduino.git
+	https://github.com/kermite-org/keyboard_peripheral_modules.git
 
 board_build.filesystem_size = 64k
