update library url

--- a/development/testbed/platformio.ini
+++ b/development/testbed/platformio.ini
@@ -20,7 +20,8 @@ platform_packages =
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 ;platform_packages = 
 ; 	framework-arduinopico@symlink://../../../arduino-pico
-lib_deps = https://github.com/kermite-org/keyboard_peripheral_modules
+lib_deps = keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules#0.1.0
+; lib_deps = keyboard_peripheral_modules=symlink://../../../keyboard_pheripheral_modules
 board_build.filesystem_size = 64k
 
 
@@ -35,7 +36,7 @@ framework = arduino
 platform_packages = 
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 lib_deps = 
-	https://github.com/kermite-org/keyboard_peripheral_modules
+	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules#0.1.0
 	adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
 build_flags =
