--- a/examples_platformio/key_matrix/platformio.ini
+++ b/examples_platformio/key_matrix/platformio.ini
@@ -16,7 +16,7 @@ platform_packages =
 	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 lib_deps =
 	;https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
-	https://github.com/kermite-org/KermiteCore_Arduino.git
-	https://github.com/kermite-org/keyboard_peripheral_modules.git
+	KermiteCore_Arduino=https://github.com/kermite-org/KermiteCore_Arduino.git
+	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules/archive/refs/tags/0.1.0.tar.gz
 
 board_build.filesystem_size = 64k
