update library URLs

--- a/development/testbed/platformio.ini
+++ b/development/testbed/platformio.ini
@@ -16,11 +16,9 @@ default_envs=generic
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
-platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
-;platform_packages = 
-; 	framework-arduinopico@symlink://../../../arduino-pico
-lib_deps = keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules#0.1.0
+platform_packages = framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+;platform_packages = framework-arduinopico@symlink://../../../arduino-pico
+lib_deps = keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules
 ; lib_deps = keyboard_peripheral_modules=symlink://../../../keyboard_pheripheral_modules
 board_build.filesystem_size = 64k
 
@@ -33,10 +31,9 @@ board_build.filesystem_size = 64k
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
-platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+platform_packages = framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 lib_deps = 
-	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules#0.1.0
+	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules
 	adafruit/Adafruit SPIFlash@^4.0.0
 board_build.filesystem_size = 64k
 build_flags =
