--- a/examples_platformio/basic/platformio.ini
+++ b/examples_platformio/basic/platformio.ini
@@ -12,10 +12,7 @@
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
-platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
-lib_deps = 
-	; https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
-	KermiteCore_Arduino=https://github.com/kermite-org/KermiteCore_Arduino.git
+platform_packages = framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+lib_deps = KermiteCore_Arduino=https://github.com/kermite-org/KermiteCore_Arduino.git#0.1.5
 
 board_build.filesystem_size = 64k
