--- a/examples_platformio/key_matrix/platformio.ini
+++ b/examples_platformio/key_matrix/platformio.ini
@@ -12,11 +12,9 @@
 platform = https://github.com/maxgerhardt/platform-raspberrypi.git
 board = generic
 framework = arduino
-platform_packages = 
-	framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
+platform_packages = framework-arduinopico@https://github.com/kermite-org/arduino-pico/releases/download/2.6.5-kermite-fork-5/rp2040-2.6.5-kermite-fork-5.zip
 lib_deps =
-	;https://github.com/kermite-org/KermiteCore_Arduino/archive/refs/tags/v0.1.4.zip
-	KermiteCore_Arduino=https://github.com/kermite-org/KermiteCore_Arduino.git
-	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules/archive/refs/tags/0.1.0.tar.gz
+	KermiteCore_Arduino=https://github.com/kermite-org/KermiteCore_Arduino.git#0.1.5
+	keyboard_peripheral_modules=https://github.com/kermite-org/keyboard_peripheral_modules.git#0.1.0
 
 board_build.filesystem_size = 64k
