update library manifest

--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=0.1.5
 author=yahiro
 maintainer=yahiro
 sentence=Kermite firmware library for Arduino and PlatformIO.
-paragraph=Kermite firmware library for Arduino and PlatformIO.
+paragraph=You can easily create a keyboard firmware compatible to Kermite.
 category=Other
-url=https://kermite.org
+url=https://github.com/kermite-org/KermiteCore_Arduino
 architectures=rp2040
 includes=KermiteCore.h
