--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=KermiteCore_Arduino
 version=0.1.6
-author=yahiro
-maintainer=yahiro
+author=Kermite
+maintainer=Kermite
 sentence=Kermite firmware library for Arduino and PlatformIO.
-paragraph=You can easily create a keyboard firmware compatible to Kermite.
+paragraph=It is used to make a keyboard firmware compatible to Kermite keyboard ecosystem.
 category=Other
 url=https://github.com/kermite-org/KermiteCore_Arduino
 architectures=rp2040
